--- a/src/app/shared/components/side-detail/side-detail.component.html
+++ b/src/app/shared/components/side-detail/side-detail.component.html
@@ -1,6 +1,6 @@
 <div class="W100 H100" style="min-height: 50px;">
     <div class="side-ditail">
-        <div class="side-li box p-2"  *ngFor="let item of dataSesstion">
+        <div class="side-li box p-2"  *ngFor="let item of (dataSesstion$ | async) as dataSesstion">
             <div *ngFor="let data of item.data" class="pt-1">              
                    <span>
                     <strong>
@@ -8,8 +8,9 @@
                     </strong>
                     : {{data.value}}</span>  
             </div>
-            <!-- <hr> -->
+            
         </div>
 
     </div>
 </div>
+
