--- a/src/app/speaker/items/items.component.html
+++ b/src/app/speaker/items/items.component.html
@@ -4,8 +4,10 @@
         <div class="col-12 col-md-10 col-lg-8">
             <div class="card card-sm">
                 <div class="card-body row no-gutters align-items-center">
-                    <div class="col-auto" *ngIf="showSaveButton">
-                        <button class="btn  btn-lg  btn-success" (click)="saveSpeakers();">SAVE</button>
+                   
+                 
+                    <div class="col-auto" >
+                        <button class="btn  btn-lg  btn-success" #edit (click)="saveSpeakers();" *ngIf="(showSaveButton$ | async)" >SAVE</button>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-search h4 text-body"></i>
@@ -13,21 +15,25 @@
                     <!--end of col-->
                     <div class="col">
                         <input class="form-control form-control-lg form-control-borderless" type="search" #search
-                            placeholder="Search topics or keywords" (keyup.enter)="onSearch()">
+                            placeholder="Search topics or keywords" >
+                            <!-- (keyup.enter)="onSearch()" -->
                     </div>
                     <!--end of col-->
-                    <div class="col-auto">
+                    <!-- <div class="col-auto">
                         <button class="btn btn-lg btn-primary" type="submit" (click)="onSearch()">Search</button>
-                    </div>
+                    </div> -->
                     <!--end of col-->
                 </div>
             </div>
         </div>
         <!--end of col-->
     </div>
+
     <ul>
         <li class="liBox1" *ngFor="let speaker of (obsSpeakers$ | async) ;index as i;even as isEven;odd as isOdd ">
-            <div class="W100">
+           <!-- {{speaker | json}}  -->
+            <app-item (speakerChecked)="onspeakerChecked($event)" [speakerdata]=speaker [isEven]=isEven [isOdd]=isOdd ></app-item>
+            <!-- <div class="W100">
                 <div class="liBox2">
                     <div class="W100 displayflex">
                         <div [class.iseven]="isEven" [class.isodd]="isOdd" class="liBox3">
@@ -74,7 +80,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </li>
     </ul>
 </div>
